// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design.vue Load report button enabled if reports exist 1`] = `
<section>
  <div
    class="columns is-vcentered"
  >
    <div
      class="column is-one-quarter"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div>
          <em>
            Untitled Report
          </em>
        </div>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->
         
        <div
          class="control field"
        >
          <p
            class="control"
          >
            <!---->
          </p>
           
          <p
            class="control"
          >
            <div
              class="dropdown is-right"
            >
              <div
                class="dropdown-trigger"
              >
                <button
                  aria-controls="dropdown-save"
                  aria-haspopup="true"
                  class="button is-interactive-primary is-outlined"
                  disabled="disabled"
                >
                  <span>
                    Save
                  </span>
                   
                  <span
                    class="icon is-small"
                  >
                    <font-awesome-icon-stub
                      icon="caret-down"
                    />
                  </span>
                </button>
              </div>
               
              <div
                class="dropdown-menu"
                id="dropdown-save"
                role="menu"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="dropdown-item"
                  >
                    <div
                      class="field"
                    >
                      <!---->
                       
                      <div
                        class="control"
                      >
                        <input
                          class="input"
                          placeholder="Name your report"
                          type="text"
                        />
                      </div>
                    </div>
                     
                    <div
                      class="field is-grouped"
                    >
                      <div
                        class="control"
                      >
                        <button
                          class="button is-interactive-primary"
                          disabled="disabled"
                        >
                          Save
                        </button>
                      </div>
                       
                      <div
                        class="control"
                      >
                        <button
                          class="button is-text"
                        >
                          
                        Cancel
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </p>
        </div>
         
        <p
          class="control"
        >
          <div
            class="dropdown is-right"
          >
            <div
              class="dropdown-trigger"
            >
              <button
                aria-controls="dropdown-load"
                aria-haspopup="true"
                class="button is-interactive-primary is-outlined"
              >
                <span>
                  Load
                </span>
                 
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="caret-down"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="dropdown-menu"
              id="dropdown-load"
              role="menu"
            >
              <div
                class="dropdown-content"
              >
                <a
                  class="dropdown-item"
                >
                  
                Report 1 Test
              
                </a>
              </div>
            </div>
          </div>
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column is-two-fifths"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>
           
          <div
            class="column is-three-fifths"
          >
            <div
              class="buttons is-right"
            >
              <div
                class="dropdown"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-sql"
                    aria-haspopup="true"
                    class="button is-text is-small"
                    disabled="disabled"
                  >
                    <span>
                      SQL
                    </span>
                     
                    <!---->
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-sql"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  >
                    <div
                      class="level"
                    >
                      <div
                        class="level-item"
                      >
                        <code>
                          
                        </code>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <button
                class="button is-success"
                disabled="disabled"
              >
                Run
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Limit
              </label>
               
              <div
                class="control is-expanded"
              >
                <input
                  class="input is-small"
                  placeholder="Limit"
                  type="text"
                />
              </div>
            </div>
          </div>
           
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Filters
              </label>
               
              <div
                class="control is-expanded"
              >
                <div
                  class="dropdown is-fullwidth"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-none"
                      aria-haspopup="true"
                      class="button is-small"
                    >
                      <span>
                        None
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-none"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <a
                        class="dropdown-item"
                      >
                        
                      TODO
                    
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="field"
        >
          <label
            class="label"
          >
            Attributes
          </label>
        </div>
         
        <nav
          class="panel is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
              panel-block-heading
              has-background-white-bis
              has-text-grey
              is-expandable"
          >
            
                
              
          </a>
           
          <!---->
             
          <!---->
           
        </nav>
      </div>
    </aside>
     
    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              Results
            </h2>
          </div>
           
          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
               
              <button
                class="button is-selected is-interactive-secondary"
              >
                Table
              </button>
            </div>
          </div>
        </div>
         
        <!---->
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable is-collapsed"
        >
          <span
            class="accordion-title"
          >
            Charts
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-down"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <!---->
        </div>
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable"
        >
          <span>
            Data
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-up"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <div
            class="box is-radiusless is-shadowless"
          >
            <!---->
             
            <div
              class="columns is-vcentered"
            >
              <div
                class="column"
              >
                <div
                  class="tabs"
                >
                  <ul>
                    <li
                      class=""
                    >
                      <a>
                        Results (0)
                      </a>
                    </li>
                     
                    <li
                      class="is-active"
                    >
                      <a>
                        SQL
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="column"
              />
            </div>
             
            <!---->
             
            <div>
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue Run Query button enabled and SQL tab focused and displayed if selection(s) are made 1`] = `
<section>
  <div
    class="columns is-vcentered"
  >
    <div
      class="column is-one-quarter"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div>
          <em>
            Untitled Report
          </em>
        </div>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->
         
        <div
          class="control field"
        >
          <p
            class="control"
          >
            <!---->
          </p>
           
          <p
            class="control"
          >
            <div
              class="dropdown is-right"
            >
              <div
                class="dropdown-trigger"
              >
                <button
                  aria-controls="dropdown-save"
                  aria-haspopup="true"
                  class="button is-interactive-primary is-outlined"
                  disabled="disabled"
                >
                  <span>
                    Save
                  </span>
                   
                  <span
                    class="icon is-small"
                  >
                    <font-awesome-icon-stub
                      icon="caret-down"
                    />
                  </span>
                </button>
              </div>
               
              <div
                class="dropdown-menu"
                id="dropdown-save"
                role="menu"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="dropdown-item"
                  >
                    <div
                      class="field"
                    >
                      <!---->
                       
                      <div
                        class="control"
                      >
                        <input
                          class="input"
                          placeholder="Name your report"
                          type="text"
                        />
                      </div>
                    </div>
                     
                    <div
                      class="field is-grouped"
                    >
                      <div
                        class="control"
                      >
                        <button
                          class="button is-interactive-primary"
                          disabled="disabled"
                        >
                          Save
                        </button>
                      </div>
                       
                      <div
                        class="control"
                      >
                        <button
                          class="button is-text"
                        >
                          
                        Cancel
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </p>
        </div>
         
        <p
          class="control"
        >
          <div
            class="dropdown is-right"
          >
            <div
              class="dropdown-trigger"
            >
              <button
                aria-controls="dropdown-load"
                aria-haspopup="true"
                class="button is-interactive-primary is-outlined"
                disabled="disabled"
              >
                <span>
                  Load
                </span>
                 
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="caret-down"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="dropdown-menu"
              id="dropdown-load"
              role="menu"
            >
              <div
                class="dropdown-content"
              />
            </div>
          </div>
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column is-two-fifths"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>
           
          <div
            class="column is-three-fifths"
          >
            <div
              class="buttons is-right"
            >
              <div
                class="dropdown"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-sql"
                    aria-haspopup="true"
                    class="button is-text is-small"
                  >
                    <span>
                      SQL
                    </span>
                     
                    <!---->
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-sql"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  >
                    <div
                      class="level"
                    >
                      <div
                        class="level-item"
                      >
                        <code>
                          
                        </code>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <button
                class="button is-success"
              >
                Run
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Limit
              </label>
               
              <div
                class="control is-expanded"
              >
                <input
                  class="input is-small"
                  placeholder="Limit"
                  type="text"
                />
              </div>
            </div>
          </div>
           
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Filters
              </label>
               
              <div
                class="control is-expanded"
              >
                <div
                  class="dropdown is-fullwidth"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-none"
                      aria-haspopup="true"
                      class="button is-small"
                    >
                      <span>
                        None
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-none"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <a
                        class="dropdown-item"
                      >
                        
                      TODO
                    
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="field"
        >
          <label
            class="label"
          >
            Attributes
          </label>
        </div>
         
        <nav
          class="panel is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
              panel-block-heading
              has-background-white-bis
              has-text-grey
              is-expandable"
          >
            
                
              
          </a>
           
          <!---->
             
          <!---->
           
        </nav>
      </div>
    </aside>
     
    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              Results
            </h2>
          </div>
           
          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
               
              <button
                class="button is-selected is-interactive-secondary"
              >
                Table
              </button>
            </div>
          </div>
        </div>
         
        <!---->
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable is-collapsed"
        >
          <span
            class="accordion-title"
          >
            Charts
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-down"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <!---->
        </div>
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable"
        >
          <span>
            Data
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-up"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <div
            class="box is-radiusless is-shadowless"
          >
            <!---->
             
            <div
              class="columns is-vcentered"
            >
              <div
                class="column"
              >
                <div
                  class="tabs"
                >
                  <ul>
                    <li
                      class=""
                    >
                      <a>
                        Results (0)
                      </a>
                    </li>
                     
                    <li
                      class="is-active"
                    >
                      <a>
                        SQL
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="column"
              />
            </div>
             
            <!---->
             
            <div>
              <div>
                <code>
                  
                </code>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue Save report button enabled if query has ran 1`] = `
<section>
  <div
    class="columns is-vcentered"
  >
    <div
      class="column is-one-quarter"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div>
          <em>
            Untitled Report
          </em>
        </div>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->
         
        <div
          class="control field"
        >
          <p
            class="control"
          >
            <!---->
          </p>
           
          <p
            class="control"
          >
            <div
              class="dropdown is-right"
            >
              <div
                class="dropdown-trigger"
              >
                <button
                  aria-controls="dropdown-save"
                  aria-haspopup="true"
                  class="button is-interactive-primary is-outlined"
                  disabled="disabled"
                >
                  <span>
                    Save
                  </span>
                   
                  <span
                    class="icon is-small"
                  >
                    <font-awesome-icon-stub
                      icon="caret-down"
                    />
                  </span>
                </button>
              </div>
               
              <div
                class="dropdown-menu"
                id="dropdown-save"
                role="menu"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="dropdown-item"
                  >
                    <div
                      class="field"
                    >
                      <!---->
                       
                      <div
                        class="control"
                      >
                        <input
                          class="input"
                          placeholder="Name your report"
                          type="text"
                        />
                      </div>
                    </div>
                     
                    <div
                      class="field is-grouped"
                    >
                      <div
                        class="control"
                      >
                        <button
                          class="button is-interactive-primary"
                          disabled="disabled"
                        >
                          Save
                        </button>
                      </div>
                       
                      <div
                        class="control"
                      >
                        <button
                          class="button is-text"
                        >
                          
                        Cancel
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </p>
        </div>
         
        <p
          class="control"
        >
          <div
            class="dropdown is-right"
          >
            <div
              class="dropdown-trigger"
            >
              <button
                aria-controls="dropdown-load"
                aria-haspopup="true"
                class="button is-interactive-primary is-outlined"
                disabled="disabled"
              >
                <span>
                  Load
                </span>
                 
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="caret-down"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="dropdown-menu"
              id="dropdown-load"
              role="menu"
            >
              <div
                class="dropdown-content"
              />
            </div>
          </div>
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column is-two-fifths"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>
           
          <div
            class="column is-three-fifths"
          >
            <div
              class="buttons is-right"
            >
              <div
                class="dropdown"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-sql"
                    aria-haspopup="true"
                    class="button is-text is-small"
                  >
                    <span>
                      SQL
                    </span>
                     
                    <!---->
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-sql"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  >
                    <div
                      class="level"
                    >
                      <div
                        class="level-item"
                      >
                        <code>
                          
                        </code>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <button
                class="button is-success"
              >
                Run
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Limit
              </label>
               
              <div
                class="control is-expanded"
              >
                <input
                  class="input is-small"
                  placeholder="Limit"
                  type="text"
                />
              </div>
            </div>
          </div>
           
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Filters
              </label>
               
              <div
                class="control is-expanded"
              >
                <div
                  class="dropdown is-fullwidth"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-none"
                      aria-haspopup="true"
                      class="button is-small"
                    >
                      <span>
                        None
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-none"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <a
                        class="dropdown-item"
                      >
                        
                      TODO
                    
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="field"
        >
          <label
            class="label"
          >
            Attributes
          </label>
        </div>
         
        <nav
          class="panel is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
              panel-block-heading
              has-background-white-bis
              has-text-grey
              is-expandable"
          >
            
                
              
          </a>
           
          <!---->
             
          <!---->
           
        </nav>
      </div>
    </aside>
     
    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              Results
            </h2>
          </div>
           
          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
               
              <button
                class="button is-selected is-interactive-secondary"
              >
                Table
              </button>
            </div>
          </div>
        </div>
         
        <!---->
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable is-collapsed"
        >
          <span
            class="accordion-title"
          >
            Charts
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-down"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <!---->
        </div>
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable"
        >
          <span>
            Data
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-up"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <div
            class="box is-radiusless is-shadowless"
          >
            <!---->
             
            <div
              class="columns is-vcentered"
            >
              <div
                class="column"
              >
                <div
                  class="tabs"
                >
                  <ul>
                    <li
                      class=""
                    >
                      <a>
                        Results (0)
                      </a>
                    </li>
                     
                    <li
                      class="is-active"
                    >
                      <a>
                        SQL
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="column"
              />
            </div>
             
            <!---->
             
            <div>
              <div>
                <code>
                  
                </code>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue a loaded report renders report name, selections, chart, SQL, and results where the Save, Load, and Run Query buttons are enabled 1`] = `
<section>
  <div
    class="columns is-vcentered"
  >
    <div
      class="column is-one-quarter"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div>
          Report 1 Test
        </div>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <p
          class="control"
        >
          <dropdown-stub
            isrightaligned="true"
            label="Add to Dashboard"
          />
        </p>
         
        <div
          class="control field has-addons"
        >
          <p
            class="control"
          >
            <button
              class="button is-interactive-primary is-outlined"
            >
              <span>
                Save
              </span>
            </button>
          </p>
           
          <p
            class="control"
          >
            <dropdown-stub
              buttonclasses="is-interactive-primary is-outlined"
              disabled="true"
              isrightaligned="true"
              label=""
            />
          </p>
        </div>
         
        <p
          class="control"
        >
          <dropdown-stub
            buttonclasses="is-interactive-primary is-outlined"
            isrightaligned="true"
            label="Load"
          />
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column is-two-fifths"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>
           
          <div
            class="column is-three-fifths"
          >
            <div
              class="buttons is-right"
            >
              <dropdown-stub
                buttonclasses="is-text is-small"
                iscaretremoved="true"
                label="SQL"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="level"
                  >
                    <div
                      class="level-item"
                    >
                      <code>
                        
                      </code>
                    </div>
                  </div>
                </div>
              </dropdown-stub>
               
              <button
                class="button is-success"
              >
                Run
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Limit
              </label>
               
              <div
                class="control is-expanded"
              >
                <input
                  class="input is-small"
                  placeholder="Limit"
                  type="text"
                />
              </div>
            </div>
          </div>
           
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Filters
              </label>
               
              <div
                class="control is-expanded"
              >
                <dropdown-stub
                  buttonclasses="is-small"
                  isfullwidth="true"
                  label="None"
                >
                  <div
                    class="dropdown-content"
                  >
                    <a
                      class="dropdown-item"
                    >
                      
                      TODO
                    
                    </a>
                  </div>
                </dropdown-stub>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="field"
        >
          <label
            class="label"
          >
            Attributes
          </label>
        </div>
         
        <nav
          class="panel is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
              panel-block-heading
              has-background-white-bis
              has-text-grey
              is-expandable"
          >
            
                
              
          </a>
           
          <!---->
             
          <!---->
           
        </nav>
      </div>
    </aside>
     
    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              Results
            </h2>
          </div>
           
          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
               
              <button
                class="button is-selected is-interactive-secondary"
              >
                Table
              </button>
            </div>
          </div>
        </div>
         
        <!---->
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable is-collapsed"
        >
          <span
            class="accordion-title"
          >
            Charts
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-down"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <!---->
        </div>
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable"
        >
          <span>
            Data
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-up"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <div
            class="box is-radiusless is-shadowless"
          >
            <!---->
             
            <div
              class="columns is-vcentered"
            >
              <div
                class="column"
              >
                <div
                  class="tabs"
                >
                  <ul>
                    <li
                      class=""
                    >
                      <a>
                        Results (0)
                      </a>
                    </li>
                     
                    <li
                      class="is-active"
                    >
                      <a>
                        SQL
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="column"
              />
            </div>
             
            <resulttable-stub />
             
            <div>
              <div>
                <code>
                  
                </code>
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue no selections, chart, SQL, or results where the Save, Load, and Run Query buttons are disabled by default 1`] = `
<section>
  <div
    class="columns is-vcentered"
  >
    <div
      class="column is-one-quarter"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div>
          <em>
            Untitled Report
          </em>
        </div>
      </div>
    </div>
     
    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->
         
        <div
          class="control field"
        >
          <p
            class="control"
          >
            <!---->
          </p>
           
          <p
            class="control"
          >
            <div
              class="dropdown is-right"
            >
              <div
                class="dropdown-trigger"
              >
                <button
                  aria-controls="dropdown-save"
                  aria-haspopup="true"
                  class="button is-interactive-primary is-outlined"
                  disabled="disabled"
                >
                  <span>
                    Save
                  </span>
                   
                  <span
                    class="icon is-small"
                  >
                    <font-awesome-icon-stub
                      icon="caret-down"
                    />
                  </span>
                </button>
              </div>
               
              <div
                class="dropdown-menu"
                id="dropdown-save"
                role="menu"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="dropdown-item"
                  >
                    <div
                      class="field"
                    >
                      <!---->
                       
                      <div
                        class="control"
                      >
                        <input
                          class="input"
                          placeholder="Name your report"
                          type="text"
                        />
                      </div>
                    </div>
                     
                    <div
                      class="field is-grouped"
                    >
                      <div
                        class="control"
                      >
                        <button
                          class="button is-interactive-primary"
                          disabled="disabled"
                        >
                          Save
                        </button>
                      </div>
                       
                      <div
                        class="control"
                      >
                        <button
                          class="button is-text"
                        >
                          
                        Cancel
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </p>
        </div>
         
        <p
          class="control"
        >
          <div
            class="dropdown is-right"
          >
            <div
              class="dropdown-trigger"
            >
              <button
                aria-controls="dropdown-load"
                aria-haspopup="true"
                class="button is-interactive-primary is-outlined"
                disabled="disabled"
              >
                <span>
                  Load
                </span>
                 
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="caret-down"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="dropdown-menu"
              id="dropdown-load"
              role="menu"
            >
              <div
                class="dropdown-content"
              />
            </div>
          </div>
        </p>
      </div>
    </div>
  </div>
   
  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column is-two-fifths"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>
           
          <div
            class="column is-three-fifths"
          >
            <div
              class="buttons is-right"
            >
              <div
                class="dropdown"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-sql"
                    aria-haspopup="true"
                    class="button is-text is-small"
                    disabled="disabled"
                  >
                    <span>
                      SQL
                    </span>
                     
                    <!---->
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-sql"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  >
                    <div
                      class="level"
                    >
                      <div
                        class="level-item"
                      >
                        <code>
                          
                        </code>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
               
              <button
                class="button is-success"
                disabled="disabled"
              >
                Run
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Limit
              </label>
               
              <div
                class="control is-expanded"
              >
                <input
                  class="input is-small"
                  placeholder="Limit"
                  type="text"
                />
              </div>
            </div>
          </div>
           
          <div
            class="column"
          >
            <div
              class="field"
            >
              <label
                class="label"
              >
                Filters
              </label>
               
              <div
                class="control is-expanded"
              >
                <div
                  class="dropdown is-fullwidth"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-none"
                      aria-haspopup="true"
                      class="button is-small"
                    >
                      <span>
                        None
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-none"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <a
                        class="dropdown-item"
                      >
                        
                      TODO
                    
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="field"
        >
          <label
            class="label"
          >
            Attributes
          </label>
        </div>
         
        <nav
          class="panel is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
              panel-block-heading
              has-background-white-bis
              has-text-grey
              is-expandable"
          >
            
                
              
          </a>
           
          <!---->
             
          <!---->
           
        </nav>
      </div>
    </aside>
     
    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              Results
            </h2>
          </div>
           
          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
               
              <button
                class="button"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
               
              <button
                class="button is-selected is-interactive-secondary"
              >
                Table
              </button>
            </div>
          </div>
        </div>
         
        <!---->
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable is-collapsed"
        >
          <span
            class="accordion-title"
          >
            Charts
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-down"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <!---->
        </div>
         
        <div
          class="has-background-primary
          accordion-header
          has-text-white-bis
          is-expandable"
        >
          <span>
            Data
          </span>
           
          <div
            class="accordion-toggle"
          >
            <a
              class="button is-primary is-small"
            >
              <span
                class="icon is-small"
              >
                <font-awesome-icon-stub
                  icon="angle-up"
                />
              </span>
            </a>
          </div>
        </div>
         
        <div
          class="accordion-body"
        >
          <div
            class="box is-radiusless is-shadowless"
          >
            <!---->
             
            <div
              class="columns is-vcentered"
            >
              <div
                class="column"
              >
                <div
                  class="tabs"
                >
                  <ul>
                    <li
                      class=""
                    >
                      <a>
                        Results (0)
                      </a>
                    </li>
                     
                    <li
                      class="is-active"
                    >
                      <a>
                        SQL
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
               
              <div
                class="column"
              />
            </div>
             
            <!---->
             
            <div>
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
  </div>
</section>
`;
